# mini_aes

./: README.md
C/: CMakeLists.txt  Config.h.in
C/include/: mini_aes.h
C/src/: mini_aes.c
NodeJs/: mini_aes.js  test.js
include/: mini_aes.h
src/: mini_aes.c
